--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+  cscd488:
+    container_name: cscd488
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80"
   composer:
     image: composer:1.9.3
     environment:
@@ -20,16 +27,3 @@ services:
       - .:/app
     working_dir: /app
     entrypoint: vendor/bin/phpunit
-  fpm:
-    image: php:7.4-fpm
-    restart: always
-    volumes:
-      - .:/app
-  nginx:
-    image: nginx:1.17.8-alpine
-    ports:
-      - 8080:80
-    volumes:
-      - .:/app
-      - ./var/log/nginx:/var/log/nginx
-      - .conf/nginx/site.conf:/etc/nginx/conf.d/default.conf
